fix: add word wrapping to multiple table cells

--- a/src/public/assets/css/global.css
+++ b/src/public/assets/css/global.css
@@ -59,18 +59,21 @@ td {
 }
 
 #problemset th:nth-child(2) {
-	width: 62.5%;
+	width: 55%;
 	text-align: center;
+	word-wrap: break-word;
 }
 
 #problemset th:nth-child(3) {
 	width: 25%;
 	text-align: center;
+	word-wrap: break-word;
 }
 
 #problemset th:nth-child(4) {
-	width: 7.5%;
+	width: 15%;
 	text-align: center;
+	word-wrap: break-word;
 }
 
 #problemset td:nth-child(1) {
@@ -79,15 +82,17 @@ td {
 }
 
 #problemset td:nth-child(2) {
-	width: 62.5%;
+	width: 55%;
+	word-wrap: break-word;
 }
 
 #problemset td:nth-child(3) {
 	width: 25%;
+	word-wrap: break-word;
 }
 
 #problemset td:nth-child(4) {
-	width: 7.5%;
+	width: 15%;
 	text-align: center;
 }
 
@@ -101,11 +106,12 @@ td {
 }
 
 #correct-answers th:nth-child(2) {
-	width: 62.5%;
+	width: 55%;
 }
 
 #correct-answers th:nth-child(3) {
-	width: 22.5%;
+	width: 30%;
+	word-wrap: break-word;
 }
 
 #correct-answers {
